Table customers {
  customer_id int [pk, increment]
  customer_name varchar
  phone varchar
  email varchar
  total_claims int
  total_claim_amount decimal
  fraud_cases int
}

Table policies {
  policy_id int [pk, increment]
  customer_id int
  policy_number varchar
  policy_type varchar
  coverage_amount decimal
  start_date date
  end_date date
  status varchar
}

Table claims {
  claim_id int [pk, increment]
  customer_id int
  policy_id int
  incident_date timestamp
  claim_date timestamp
  accident_location varchar
  claim_amount decimal
  description text
  status varchar
  risk_score int
}

Table claim_documents {
  document_id int [pk, increment]
  claim_id int
  document_type varchar
  file_name varchar
  file_path text
  uploaded_at timestamp
}

Table fraud_history {
  fraud_id int [pk, increment]
  customer_id int
  claim_id int
  fraud_reason text
  investigation_status varchar
  reported_date date
}

Ref: policies.customer_id > customers.customer_id
Ref: claims.customer_id > customers.customer_id
Ref: claims.policy_id > policies.policy_id
Ref: claim_documents.claim_id > claims.claim_id
Ref: fraud_history.customer_id > customers.customer_id
Ref: fraud_history.claim_id > claims.claim_id
